web/components/FrontpageHero/FrontpageHero.module.scss
$breakpoint: 750px;

.wrap {
  position: relative;

  @media (min-width: $breakpoint) {
    display: flex;
  }
}

.heroContent {
  flex-shrink: 0;
  z-index: 1;
  position: relative;
}


.heroImage {
  flex: 1;
  position: relative;

  img {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: contain;
  }
}

.heroImageMobile {
  position: absolute;
  top: -50px;
  right: -75px;
  z-index: 0;

  @media (max-width: 400px) {
    right: -160px;
  }

  @media (min-width: calc($breakpoint )) {
    display: none;
  }

  img {
    max-width: 700px;
  }
}


.heroTagline {
  font-size: 80px;
  font-family: "Canela";
  line-height: 1;
  margin-top: var(--spacing-6);

  @media (min-width: $breakpoint) {
    display: none;
  }
}

.logo {
  line-height: 0.9;
  font-size: 5rem;
  font-family: "Strike";

  @media (max-width: 750px) {
    font-size: 4rem;
  }

  span {
    display: block;
  }
}

.date {
  font-size: 2.1rem;
  line-height: 1.2;

  @media (max-width: 750px) {
    font-size: 1.8rem;
  }
}

